[tool.poetry]
name = "aioboto3"
version = "10.0.0"
description = "Async boto3 wrapper"
authors = ["Terry Cain <terry@terrys-home.co.uk>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/terrycain/aioboto3"
repository = "https://github.com/terrycain/aioboto3"
documentation = "https://readthedocs.org/projects/aioboto3/"
keywords = ["aioboto3", "boto3", "aws"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]


[tool.poetry.dependencies]
python = "^3.8"
aiobotocore = {version = "2.18.0", extras = ["boto3"]}
aiofiles = {version = ">=23.2.1"}
cryptography = {version = ">=2.3.1", optional = true}
chalice = {version = ">=1.24.0", optional = true}

[tool.poetry.extras]
s3cse = ["cryptography"]
chalice = ["chalice"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
dill = "*"
pygithub = "*"
requests = "*"
aiofiles = "*"
moto = {extras = ["server"], version = "*"}
chalice = "^1.24.0"
pytest-asyncio = "^0.19.0"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "^1.3.0rc1"
sphinx-autodoc-typehints = "*"

[build-system]
requires = ["poetry_core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["aioboto3/__init__.py"]
